<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
    </parent>
    <groupId>fr.insee</groupId>
    <artifactId>trevas-lab</artifactId>
    <version>1.1.0</version>
    <name>Trevas Lab</name>
    <description>VTL API calling Trevas</description>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>
        <trevas.version>1.8.0</trevas.version>
        <jackson.version>2.15.2</jackson.version>
        <jakarta-servlet.version>4.0.3</jakarta-servlet.version>
        <jersey.version>2.36</jersey.version>
        <maven.compiler.release/>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.codehaus.janino</groupId>
                <artifactId>janino</artifactId>
                <version>3.1.10</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <!-- list of other repositories -->
        <repository>
            <id>SparkPackagesRepo</id>
            <url>https://repos.spark-packages.org/</url>
        </repository>
        <repository>
            <id>Github</id>
            <url>https://maven.pkg.github.com/InseeFr/Trevas</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>saurfang</groupId>
            <artifactId>spark-sas7bdat</artifactId>
            <version>3.0.0-s_2.12</version>
            <exclusions>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-library</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api-scala_2.12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-engine</artifactId>
            <version>${trevas.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-jdbc</artifactId>
            <version>${trevas.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-spark</artifactId>
            <version>${trevas.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-prov</artifactId>
            <version>${trevas.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-jackson</artifactId>
            <version>${trevas.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-aws</artifactId>
            <version>3.3.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>3.3.4</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-reload4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.thoughtworks.paranamer</groupId>
                    <artifactId>paranamer</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.squareup.okio</groupId>
                    <artifactId>okio</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-kubernetes_2.12</artifactId>
            <version>3.5.0</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-slf4j2-impl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.0</version>
        </dependency>
        <dependency>
            <groupId>net.postgis</groupId>
            <artifactId>postgis-jdbc</artifactId>
            <version>2021.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-scala_2.12</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- Spring Web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>3.3.4</version>
        </dependency>
        <!-- Spring Security -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>3.3.4</version>
        </dependency>
        <!-- OIDC -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
            <version>3.3.4</version>
        </dependency>
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>3.3.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
            <version>3.3.4</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <version>3.3.4</version>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-engine</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-engine.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-jackson</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-jackson.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-jdbc</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-jdbc.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-model</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-model.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-parser</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-parser.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-prov</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-prov.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.insee.trevas</groupId>
                                    <artifactId>vtl-spark</artifactId>
                                    <version>${trevas.version}</version>
                                    <type>jar</type>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>vtl-spark.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>delete-old-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <delete file="${project.build.directory}/lib/vtl-engine-${trevas.version}.jar"/>
                                <delete file="${project.build.directory}/lib/vtl-jackson-${trevas.version}.jar"/>
                                <delete file="${project.build.directory}/lib/vtl-jdbc-${trevas.version}.jar"/>
                                <delete file="${project.build.directory}/lib/vtl-model-${trevas.version}.jar"/>
                                <delete file="${project.build.directory}/lib/vtl-parser-${trevas.version}.jar"/>
                                <delete file="${project.build.directory}/lib/vtl-prov-${trevas.version}.jar"/>
                                <delete file="${project.build.directory}/lib/vtl-spark-${trevas.version}.jar"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
